Ignore folding ranges if document has changed

BUG: 384459